# solana-m

./: .dockerignore  .env.dev  .env.prod  .gitignore  .prettierrc  Anchor.toml  Cargo.toml  Dockerfile.yield  LICENSE  Makefile  README.md  Tiltfile  dev.env  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prod.env  tsconfig.json
.github/setup/: action.yml
.github/workflows/: anchor.yaml  devnet-earn.yaml  devnet-portal.yaml
audit/: scope.md
cli/: main.ts  test.ts  utils.ts
cli/abis/: hub-portal.json
crates/anchor_m0/: Cargo.toml
crates/anchor_m0/src/: extension_interface.rs  lib.rs
dashbaord/: package.json
dashbaord/src/: index.css  main.tsx
dashbaord/src/components/: navbar.tsx  settings.tsx
dashboard/: .env  .env.dev.template  .env.prod.template  Dockerfile  index.html  package.json  vite.config.ts
dashboard/src/: index.css  main.tsx
dashboard/src/components/: bridge.tsx  bridges.tsx  earner.tsx  historical-supply.tsx  holders.tsx  index-updates.tsx  links.tsx  loading.tsx  navbar.tsx  settings.tsx  simulate.tsx  statsbar.tsx  wrap.tsx
dashboard/src/context/: settings.tsx
dashboard/src/hooks/: useAccount.ts  useData.ts
dashboard/src/services/: consts.ts  rpc.ts  sdk.ts  subgraph.ts  utils.ts
programs/common/: Cargo.toml
programs/earn/: Cargo.toml
programs/earn/src/: constants.rs  errors.rs  lib.rs
programs/earn/src/instructions/: mod.rs
programs/earn/src/instructions/admin/: initialize.rs  mod.rs  set_claim_cooldown.rs  set_earn_authority.rs  set_earner_recipient.rs
programs/earn/src/instructions/earn_authority/: claim_for.rs  complete_claims.rs  mod.rs
programs/earn/src/instructions/earn_manager/: add_earner.rs  configure.rs  mod.rs  remove_earner.rs
programs/earn/src/instructions/open/: add_registrar_earner.rs  mod.rs  remove_earn_manager.rs  remove_orphaned_earner.rs  remove_registrar_earner.rs
programs/earn/src/instructions/portal/: mod.rs  propagate_index.rs
programs/earn/src/state/: earn_manager.rs  earner.rs  global.rs  mod.rs
programs/earn/src/utils/: merkle_proof.rs  mod.rs  token.rs
programs/ext_earn/: Cargo.toml
programs/mint-master/: Cargo.toml
programs/mint_master/: Cargo.toml
programs/mint_master/src/: lib.rs
programs/permissioned-swap/: Cargo.toml
programs/permissioned-swap/src/: errors.rs  lib.rs  state.rs
programs/permissioned-swap/src/instructions/: deposit.rs  initialize_global.rs  initialize_pool.rs  mod.rs
programs/portal/: Cargo.toml  README.md
programs/portal/src/: bpf_loader_upgradeable.rs  config.rs  error.rs  errors.rs  lib.rs  payloads.rs
programs/portal/src/instructions/: admin.rs  initialize.rs  luts.rs  mod.rs  redeem.rs  release_inbound.rs  transfer.rs  transfer_extension.rs
programs/portal/src/instructions/inbound/: mod.rs  receive_message.rs  redeem.rs  release_inbound.rs
programs/portal/src/instructions/outbound/: mod.rs  release_outbound.rs  transfer.rs
programs/portal/src/ntt_messages/: bpf_loader_upgradeable.rs  mod.rs  ntt_manager.rs
programs/portal/src/payloads/: index_transfer.rs  mod.rs  token_transfer.rs
programs/portal/src/queue/: inbox.rs  outbox.rs
programs/portal/src/state/: config.rs  inbox.rs  messages.rs  mod.rs  outbox.rs  peer.rs  spl_multisig.rs  transeiver.rs  wormhole.rs
programs/portal/src/transceivers/wormhole/instructions/: receive_message.rs  release_outbound.rs
programs/portal/src/utils/: bitmap.rs  consts.rs  mod.rs
programs/registrar/: Cargo.toml
programs/registrar/src/: constants.rs  errors.rs  lib.rs  utils.rs  views.rs
programs/registrar/src/instructions/: mod.rs
programs/registrar/src/instructions/admin/: add_to_list.rs  delete_key.rs  mod.rs  remove_from_list.rs  set_key.rs
programs/registrar/src/state/: flag.rs  mod.rs  register.rs
programs/wrapped-m/: Cargo.toml
programs/wrapped-m/src/: errors.rs  lib.rs
programs/wrapped-m/src/instructions/admin/: initialize.rs
programs/wrapped-m/src/instructions/earn_authority/: claim_for.rs  sync.rs
programs/wrapped-m/src/instructions/open/: unwrap.rs  wrap.rs
programs/wrapped-m/src/state/: mod.rs
programs/wrapped-m/src/utils/: earn_global.rs  token.rs
programs/wrapped_m/: Cargo.toml
sdk/: README.md  generate.js  package.json  tsconfig.json
sdk/src/: accounts.ts  earn_auth.ts  earn_manager.ts  earner.ts  evm_caller.ts  graph.ts  index.ts  logger.ts  merkle.ts  open.ts  registrar.ts  tokenBalance.ts  transaction.ts  twb.ts  utils.ts
services/api/: README.md
services/cli/: confidential-transfers.ts  fb.ts  main.ts  package.json  test.ts  utils.ts
services/index-bot/: Dockerfile  main.ts  package.json
services/shared/: balances.ts  environment.ts  package.json  slack.ts  validation.ts
services/switchboard/: index.ts
services/yield-bot/: Dockerfile  Dockerfile.yield  loki.ts  main.ts  package.json  slack.ts
substreams/: Cargo.toml  Makefile  generator.json  substreams.yaml
substreams/db/: Dockerfile  schema.json
substreams/graph/: Cargo.toml  substreams.yaml
substreams/graph/proto/: database.proto
substreams/graph/src/: lib.rs  utils.rs
substreams/graph/src/pb/: database.v1.rs  mod.rs
substreams/graph/subgraph/: schema.graphql
substreams/graph/subgraph/src/pb/transfers/v1/: TokenBalanceUpdate.ts  TokenTransaction.ts
substreams/proto/: token_data.proto  transfers.proto
substreams/src/: consts.rs  events.rs  lib.rs  utils.rs
substreams/src/pb/: mod.rs  mydata.v1.rs  token.v1.rs  transfers.rs  transfers.v1.rs
substreams/subgraph/: README.md  package-lock.json  package.json  schema.graphql  subgraph.yaml
substreams/subgraph/src/: mappings.ts
substreams/subgraph/src/pb/transfers/v1/: BridgeEvent.ts  Claim.ts  IndexUpdate.ts  Instruction.ts  TokenTransactions.ts
substreams/tooling/: main.go
substreams/tooling/mongo/: mongo.go
tests/: earn.test.js  merkle.ts  package.json  payloads.ts  test-utils.ts
tests/keys/: admin.json  mint.json  portal.json
tests/unit/: earn.test.ts  ext_earn.test.ts  indexbot.test.ts  mint_master.test.ts  portal.test.ts  registrar.test.ts  sdk.test.ts  stack.test.ts  yield.test.ts  yieldbot.test.ts
(+105 files in other folders)
