[workspace]
members = ["programs/*", "substreams"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "=1.18.10"
solana-address-lookup-table-program = "=1.18.10"
cfg-if = "1.0"
