[package]
name = "earn"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "earn"

[features]
anchor-debug = ["anchor-lang/anchor-debug"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["mainnet"]
mainnet = []
devnet = []

[dependencies]
anchor-lang = { workspace = true, features = [
    "anchor-debug",
    "init-if-needed",
] }
anchor-spl.workspace = true
solana-program.workspace = true
cfg-if.workspace = true
