[package]
name = "portal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
wormhole-anchor-sdk = { version = "0.29.0-alpha.1", default-features = false, features = [
    "mainnet",
] }
wormhole-io = "0.1.3"
ntt-messages = { git = "https://github.com/wormhole-foundation/native-token-transfers", features = [
    "anchor",
    "hash",
] }
bitmaps = "3.2.1"
