[package]
name = "portal"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "portal"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ntt-messages = { git = "https://github.com/wormhole-foundation/native-token-transfers", rev = "738c67b", features = [
    "anchor",
    "hash",
] }
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl.workspace = true
spl-token-2022 = { version = "3.0.2", features = ["no-entrypoint"] }
solana-program.workspace = true
wormhole-anchor-sdk = { version = "0.29.0-alpha.1", default-features = false, features = [
    "mainnet",
] }
wormhole-io = "0.1.3"
wormhole-solana-utils = "0.3.0-alpha.1"
bitmaps = "3.2.1"
cfg-if.workspace = true
solana-address-lookup-table-program.workspace = true
earn = { path = "../earn", features = ["cpi"] }
