[package]
name = "registrar"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "registrar"

[features]
anchor-debug = ["anchor-lang/anchor-debug"]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = [
    "anchor-debug",
    "init-if-needed",
] }
solana-program.workspace = true
bs58 = "0.5.1"
common = { version = "0.1.0", path = "../common", features = ["no-entrypoint"] }
