[package]
name = "wrapped-m"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "lib"]
name = "wrapped_m"

[features]
anchor-debug = ["anchor-lang/anchor-debug"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = [
    "anchor-debug",
] }
anchor-spl.workspace = true
solana-program.workspace = true
spl-token-2022.workspace = true
cfg-if.workspace = true
earn = { path = "../earn", features = ["cpi"] }
