[package]
name = "m_token_transactions"
version = "0.0.1"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
bs58 = "0.5.1"
prost = "0.11.9"
substreams = "0.5.22"
regex = "1.10.5"
substreams-solana = { git = "https://github.com/streamingfast/substreams-solana", branch = "master" }
substreams-solana-utils = { git = "https://github.com/0xpapercut/substreams-solana-utils", tag = "v0.1.5" }
anchor-lang.workspace = true
five8_const = "0.1.3"
earn = { path = "../../programs/earn" }
